# Ticker-Pulse

./: .gitignore  .my.cnf  DEVELOPMENT_SCHEDULE.md  Dockerfile  README.md  REST_API_SUMMARY.md  demo_quick.py  docker-compose.yml  pyproject.toml  run_collector.py  system_diagram.md
app/: __init__.py
app/api/: __init__.py  main.py  prices.py  tickers.py
app/collectors/: __init__.py  yahoo_collector.py
app/db/: base.py  models.py
collectors/: collector_agent.py  yahoo_collector.py
migrations/: env.py
migrations/versions/: 1a455a4b42d0_add_missing_price_columns.py  68fc2734113f_initial_migration.py
tests/: test_collector.py  test_collector_db.py  test_yahoo_basic.py
